--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,11 +1,11 @@
 steps:
   # Build the container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/php-oauth-app:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/gim-ppbo:$COMMIT_SHA', '.']
   
   # Push the container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/php-oauth-app:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/gim-ppbo:$COMMIT_SHA']
   
   # Deploy container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -13,11 +13,11 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'php-oauth-app'
+      - 'gim-ppbo'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/php-oauth-app:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/gim-ppbo:$COMMIT_SHA'
       - '--region'
-      - 'asia-southeast2'
+      - 'asia-southeast1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
@@ -25,7 +25,7 @@ steps:
       - 'GOOGLE_CLIENT_ID=${_GOOGLE_CLIENT_ID},GOOGLE_CLIENT_SECRET=${_GOOGLE_CLIENT_SECRET},GOOGLE_REDIRECT_URI=${_GOOGLE_REDIRECT_URI}'
 
 images:
-  - 'gcr.io/$PROJECT_ID/php-oauth-app:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/gim-ppbo:$COMMIT_SHA'
 
 options:
   logging: CLOUD_LOGGING_ONLY
