--- a/.env.template
+++ b/.env.template
@@ -2,3 +2,7 @@ GOOGLE_CLIENT_SECRET="xxxSPX-IBzu-yX1tOVse0FJyOoYwcxxxxxx"
 GOOGLE_CLIENT_ID="xxxxxx681390-b871npco41agqt652a2vp8a2jgxxxxxx.apps.googleusercontent.com"
 GOOGLE_REDIRECT_URI="http://localhost:8080/callback.php"
 JWT_SECRET="c6468be5-xxxx-xxxx-xxxx-303f48340386"
+DB_INSTANCE=''
+DB_NAME=''
+DB_USER=''
+DB_PASSWORD=''
